<resources>
    <string name="app_name">Bike Trips</string>
    <string name="add_trip_label">Add a new trip</string>
    <string name="complexity_prompt">Choose complexity level</string>
    <string name="search_title">Search</string>
    <string name="search_hint">Search</string>
    <string name="text_trips">Trips</string>
    <string name="text_home">All Trips</string>
    <string name="text_my_trips">My Trips</string>
    <string name="text_search">Search for trips</string>
    <string name="text_profile">Your Profile</string>
    <string name="text_create_trip">Create a Trip</string>
    <string name="text_edit_trip_title">Edit your trip</string>
    <string name="text_update_trip_button">Update</string>
    <string name="search_activity_label">Search</string>
    <string name="profile_activity_label">Profile</string>
    <string-array name="complexity_levels">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string name="action_sign_out">Sign out</string>
    <string name="title_activity_base">BaseActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_user">Current user</string>
    <string name="userEmail">Email:</string>
    <string name="loading_trips">Loading trips...</string>
    <string name="no_trips_found_try_again">No trips found. Try again.</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="route">Route</string>
    <string name="clear">Clear</string>
    <string name="complexity">Complexity</string>
    <string name="create">Create</string>
    <string name="searching">Searching...</string>
    <string name="duration">Duration:</string>
    <string name="stops">Stops:</string>
    <string name="trip_complexity">Complexity:</string>
    <string name="trip_description">Description:</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="title">Title</string>
    <string name="item_1">Item 1</string>
    <string name="item_2">Item 2</string>
    <string name="item_3">Item 3</string>
</resources>
