<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="60dp"
    android:layout_width="match_parent"
    android:orientation="horizontal">

    <TextView
        android:gravity="center"
        android:id="@+id/tripTitle"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:layout_width="120dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:text="@string/title"
        android:textAlignment="center"
        android:textSize="18dp" />

    <View
        android:background="#666"
        android:layout_height="match_parent"
        android:layout_width="1dp" />

    <LinearLayout
        android:layout_width="80dp"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        android:layout_weight="1">
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/edit"
            android:id="@+id/edit"
            android:layout_weight="1"
            android:onClick="editBtnClickHandler"
            />
        <Button
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/delete"
            android:layout_weight="0.9"
            android:id="@+id/delete"
            android:onClick="deleteBtnClickHandler"
            />
    </LinearLayout>

</LinearLayout>
